# OsqpEigen_local

./: CMakeLists.txt  MPC.cpp  README.md
include/: CMakeLists.txt  Data.cpp  Data.hpp  Data.tpp  Debug.cpp  Debug.hpp  OsqpEigen.h  Settings.cpp  Settings.hpp  Solver.cpp  Solver.hpp  SparseMatrixHelper.hpp  SparseMatrixHelper.tpp
